@@ -150,9 +150,15 @@ EIBnetServer::setup()
   interface = cfg.value("interface","");
   servername = cfg.value("name", dynamic_cast<Router *>(&router)->servername);
 
-  /* If we're tunneling, set up a fake tunnel stack to test the arguments */
-  if (tunnel && !static_cast<Router &>(router).checkStack(tunnel_cfg))
-    return false;
+  if (tunnel)
+    {
+      /* Check that we have client addresses. */
+      if (!static_cast<Router&>(router).hasClientAddrs())
+        return false;
+      /* set up a temporary fake tunnel stack to test the arguments early. */
+      if (!static_cast<Router &>(router).checkStack(tunnel_cfg))
+        return false;
+    }
 
   return true;
 }
