@@ -5,6 +5,7 @@ knxd (0.13.0-3) unstable; urgency=medium
   * Refactor linking drivers to the main dispatcher
   * use libfmt
     * require git or cmake if no libfmt3-dev is found
+  * Complain if -E / client-addrs= is required but missing
 
  -- Matthias Urlichs <matthias@urlichs.de>  Thu, 23 Feb 2017 10:01:37 +0100
 
